src/flutter_ffi_uvc.h

// A very short-lived native function.
//
// For very short-lived functions, it is fine to call them on the main isolate.
// They will block the Dart execution while running the native function, so
// only do this for native functions which are guaranteed to be short-lived.
FFI_PLUGIN_EXPORT int sum(int a, int b);
// A longer lived native function, which occupies the thread calling it.
//
// Do not call these kind of native functions in the main isolate. They will
// block Dart execution. This will cause dropped frames in Flutter applications.
// Instead, call these native functions on a separate isolate.
FFI_PLUGIN_EXPORT int sum_long_running(int a, int b);
FFI_PLUGIN_EXPORT int uvc_open_fd(int fd);
typedef void (*uvc_frame_listener_t)(int64_t sequence);
FFI_PLUGIN_EXPORT int uvc_start_preview(
    int frame_format,
    int width,
    int height,
    int fps);
FFI_PLUGIN_EXPORT void uvc_stop_preview(void);
FFI_PLUGIN_EXPORT void uvc_close_device(void);
FFI_PLUGIN_EXPORT int uvc_is_previewing(void);
FFI_PLUGIN_EXPORT int uvc_frame_width(void);
FFI_PLUGIN_EXPORT int uvc_frame_height(void);
FFI_PLUGIN_EXPORT int uvc_copy_latest_frame_rgba(uint8_t *buffer, int buffer_length);
FFI_PLUGIN_EXPORT int uvc_copy_latest_frame_rgba_with_metadata(
    uint8_t *buffer,
    int buffer_length,
    int *out_width,
    int *out_height,
    int64_t *out_sequence);
FFI_PLUGIN_EXPORT int uvc_copy_latest_frame_rgba_transformed(
    uint8_t *buffer,
    int buffer_length,
    int rotation,
    int flip_h,
    int flip_v,
    int *out_width,
    int *out_height,
    int64_t *out_sequence);
// Captures the latest decodable frame as JPEG bytes.
//
// For MJPEG streams the raw camera frame is returned unmodified (lossless,
// no re-encode) and [quality] is ignored. For other formats the latest
// decoded frame is encoded with libjpeg at [quality] (1-100; out-of-range
// values are clamped, <=0 uses 90).
//
// A buffer of uvc_frame_width()*uvc_frame_height()*4 bytes is always large
// enough. Returns the number of JPEG bytes written to [buffer], or 0 on
// failure (see uvc_last_error).
FFI_PLUGIN_EXPORT int uvc_capture_jpeg(
    uint8_t *buffer,
    int buffer_length,
    int quality,
    int *out_width,
    int *out_height,
    int64_t *out_sequence);
FFI_PLUGIN_EXPORT int64_t uvc_latest_frame_sequence(void);
FFI_PLUGIN_EXPORT void uvc_set_frame_listener(uvc_frame_listener_t listener);
typedef void (*uvc_error_listener_t)(const char *message);
FFI_PLUGIN_EXPORT void uvc_set_error_listener(uvc_error_listener_t listener);
FFI_PLUGIN_EXPORT int uvc_get_stream_stats_json(uint8_t *buffer, int buffer_length);
FFI_PLUGIN_EXPORT int uvc_get_supported_modes_json(uint8_t *buffer, int buffer_length);
FFI_PLUGIN_EXPORT const char *uvc_last_error(void);
FFI_PLUGIN_EXPORT void uvc_set_log_level(int level);
// Preview transform: rotation is 0, 90, 180, or 270 (clockwise degrees).
// flip_h mirrors the output left-right; flip_v mirrors it top-bottom.
// Transforms are applied during preview blit to the attached Flutter Texture
// and do not affect the shared RGBA buffer returned by copyLatestFrame.
FFI_PLUGIN_EXPORT void uvc_set_preview_transform(int rotation, int flip_h, int flip_v);