lib/src/flutter_ffi_uvc_bindings_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Bindings for `src/flutter_ffi_uvc.h`.
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class FlutterFfiUvcBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  FlutterFfiUvcBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  FlutterFfiUvcBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// A very short-lived native function.
  ///
  /// For very short-lived functions, it is fine to call them on the main isolate.
  /// They will block the Dart execution while running the native function, so
  /// only do this for native functions which are guaranteed to be short-lived.
  int sum(int a, int b) {
    return _sum(a, b);
  }

  late final _sumPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int)>>('sum');
  late final _sum = _sumPtr.asFunction<int Function(int, int)>();

  /// A longer lived native function, which occupies the thread calling it.
  ///
  /// Do not call these kind of native functions in the main isolate. They will
  /// block Dart execution. This will cause dropped frames in Flutter applications.
  /// Instead, call these native functions on a separate isolate.
  int sum_long_running(int a, int b) {
    return _sum_long_running(a, b);
  }

  late final _sum_long_runningPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int)>>(
        'sum_long_running',
      );
  late final _sum_long_running = _sum_long_runningPtr
      .asFunction<int Function(int, int)>();

  int uvc_open_fd(int fd) {
    return _uvc_open_fd(fd);
  }

  late final _uvc_open_fdPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int)>>('uvc_open_fd');
  late final _uvc_open_fd = _uvc_open_fdPtr.asFunction<int Function(int)>();

  int uvc_start_preview(int frame_format, int width, int height, int fps) {
    return _uvc_start_preview(frame_format, width, height, fps);
  }

  late final _uvc_start_previewPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int, ffi.Int, ffi.Int)>
      >('uvc_start_preview');
  late final _uvc_start_preview = _uvc_start_previewPtr
      .asFunction<int Function(int, int, int, int)>();

  void uvc_stop_preview() {
    return _uvc_stop_preview();
  }

  late final _uvc_stop_previewPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('uvc_stop_preview');
  late final _uvc_stop_preview = _uvc_stop_previewPtr
      .asFunction<void Function()>();

  void uvc_close_device() {
    return _uvc_close_device();
  }

  late final _uvc_close_devicePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('uvc_close_device');
  late final _uvc_close_device = _uvc_close_devicePtr
      .asFunction<void Function()>();

  int uvc_is_previewing() {
    return _uvc_is_previewing();
  }

  late final _uvc_is_previewingPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('uvc_is_previewing');
  late final _uvc_is_previewing = _uvc_is_previewingPtr
      .asFunction<int Function()>();

  int uvc_frame_width() {
    return _uvc_frame_width();
  }

  late final _uvc_frame_widthPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('uvc_frame_width');
  late final _uvc_frame_width = _uvc_frame_widthPtr
      .asFunction<int Function()>();

  int uvc_frame_height() {
    return _uvc_frame_height();
  }

  late final _uvc_frame_heightPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('uvc_frame_height');
  late final _uvc_frame_height = _uvc_frame_heightPtr
      .asFunction<int Function()>();

  int uvc_copy_latest_frame_rgba(
    ffi.Pointer<ffi.Uint8> buffer,
    int buffer_length,
  ) {
    return _uvc_copy_latest_frame_rgba(buffer, buffer_length);
  }

  late final _uvc_copy_latest_frame_rgbaPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Uint8>, ffi.Int)>
      >('uvc_copy_latest_frame_rgba');
  late final _uvc_copy_latest_frame_rgba = _uvc_copy_latest_frame_rgbaPtr
      .asFunction<int Function(ffi.Pointer<ffi.Uint8>, int)>();

  int uvc_copy_latest_frame_rgba_with_metadata(
    ffi.Pointer<ffi.Uint8> buffer,
    int buffer_length,
    ffi.Pointer<ffi.Int> out_width,
    ffi.Pointer<ffi.Int> out_height,
    ffi.Pointer<ffi.Int64> out_sequence,
  ) {
    return _uvc_copy_latest_frame_rgba_with_metadata(
      buffer,
      buffer_length,
      out_width,
      out_height,
      out_sequence,
    );
  }

  late final _uvc_copy_latest_frame_rgba_with_metadataPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Uint8>,
            ffi.Int,
            ffi.Pointer<ffi.Int>,
            ffi.Pointer<ffi.Int>,
            ffi.Pointer<ffi.Int64>,
          )
        >
      >('uvc_copy_latest_frame_rgba_with_metadata');
  late final _uvc_copy_latest_frame_rgba_with_metadata =
      _uvc_copy_latest_frame_rgba_with_metadataPtr
          .asFunction<
            int Function(
              ffi.Pointer<ffi.Uint8>,
              int,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Int64>,
            )
          >();

  int uvc_copy_latest_frame_rgba_transformed(
    ffi.Pointer<ffi.Uint8> buffer,
    int buffer_length,
    int rotation,
    int flip_h,
    int flip_v,
    ffi.Pointer<ffi.Int> out_width,
    ffi.Pointer<ffi.Int> out_height,
    ffi.Pointer<ffi.Int64> out_sequence,
  ) {
    return _uvc_copy_latest_frame_rgba_transformed(
      buffer,
      buffer_length,
      rotation,
      flip_h,
      flip_v,
      out_width,
      out_height,
      out_sequence,
    );
  }

  late final _uvc_copy_latest_frame_rgba_transformedPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Uint8>,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Int,
            ffi.Pointer<ffi.Int>,
            ffi.Pointer<ffi.Int>,
            ffi.Pointer<ffi.Int64>,
          )
        >
      >('uvc_copy_latest_frame_rgba_transformed');
  late final _uvc_copy_latest_frame_rgba_transformed =
      _uvc_copy_latest_frame_rgba_transformedPtr
          .asFunction<
            int Function(
              ffi.Pointer<ffi.Uint8>,
              int,
              int,
              int,
              int,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Int64>,
            )
          >();

  /// Captures the latest decodable frame as JPEG bytes.
  ///
  /// For MJPEG streams the raw camera frame is returned unmodified (lossless,
  /// no re-encode) and [quality] is ignored. For other formats the latest
  /// decoded frame is encoded with libjpeg at [quality] (1-100; out-of-range
  /// values are clamped, <=0 uses 90).
  ///
  /// A buffer of uvc_frame_width()*uvc_frame_height()*4 bytes is always large
  /// enough. Returns the number of JPEG bytes written to [buffer], or 0 on
  /// failure (see uvc_last_error).
  int uvc_capture_jpeg(
    ffi.Pointer<ffi.Uint8> buffer,
    int buffer_length,
    int quality,
    ffi.Pointer<ffi.Int> out_width,
    ffi.Pointer<ffi.Int> out_height,
    ffi.Pointer<ffi.Int64> out_sequence,
  ) {
    return _uvc_capture_jpeg(
      buffer,
      buffer_length,
      quality,
      out_width,
      out_height,
      out_sequence,
    );
  }

  late final _uvc_capture_jpegPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Uint8>,
            ffi.Int,
            ffi.Int,
            ffi.Pointer<ffi.Int>,
            ffi.Pointer<ffi.Int>,
            ffi.Pointer<ffi.Int64>,
          )
        >
      >('uvc_capture_jpeg');
  late final _uvc_capture_jpeg = _uvc_capture_jpegPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Uint8>,
          int,
          int,
          ffi.Pointer<ffi.Int>,
          ffi.Pointer<ffi.Int>,
          ffi.Pointer<ffi.Int64>,
        )
      >();

  int uvc_latest_frame_sequence() {
    return _uvc_latest_frame_sequence();
  }

  late final _uvc_latest_frame_sequencePtr =
      _lookup<ffi.NativeFunction<ffi.Int64 Function()>>(
        'uvc_latest_frame_sequence',
      );
  late final _uvc_latest_frame_sequence = _uvc_latest_frame_sequencePtr
      .asFunction<int Function()>();

  void uvc_set_frame_listener(uvc_frame_listener_t listener) {
    return _uvc_set_frame_listener(listener);
  }

  late final _uvc_set_frame_listenerPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(uvc_frame_listener_t)>>(
        'uvc_set_frame_listener',
      );
  late final _uvc_set_frame_listener = _uvc_set_frame_listenerPtr
      .asFunction<void Function(uvc_frame_listener_t)>();

  void uvc_set_error_listener(uvc_error_listener_t listener) {
    return _uvc_set_error_listener(listener);
  }

  late final _uvc_set_error_listenerPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(uvc_error_listener_t)>>(
        'uvc_set_error_listener',
      );
  late final _uvc_set_error_listener = _uvc_set_error_listenerPtr
      .asFunction<void Function(uvc_error_listener_t)>();

  int uvc_get_stream_stats_json(
    ffi.Pointer<ffi.Uint8> buffer,
    int buffer_length,
  ) {
    return _uvc_get_stream_stats_json(buffer, buffer_length);
  }

  late final _uvc_get_stream_stats_jsonPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Uint8>, ffi.Int)>
      >('uvc_get_stream_stats_json');
  late final _uvc_get_stream_stats_json = _uvc_get_stream_stats_jsonPtr
      .asFunction<int Function(ffi.Pointer<ffi.Uint8>, int)>();

  int uvc_get_supported_modes_json(
    ffi.Pointer<ffi.Uint8> buffer,
    int buffer_length,
  ) {
    return _uvc_get_supported_modes_json(buffer, buffer_length);
  }

  late final _uvc_get_supported_modes_jsonPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Uint8>, ffi.Int)>
      >('uvc_get_supported_modes_json');
  late final _uvc_get_supported_modes_json = _uvc_get_supported_modes_jsonPtr
      .asFunction<int Function(ffi.Pointer<ffi.Uint8>, int)>();

  ffi.Pointer<ffi.Char> uvc_last_error() {
    return _uvc_last_error();
  }

  late final _uvc_last_errorPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
        'uvc_last_error',
      );
  late final _uvc_last_error = _uvc_last_errorPtr
      .asFunction<ffi.Pointer<ffi.Char> Function()>();

  void uvc_set_log_level(int level) {
    return _uvc_set_log_level(level);
  }

  late final _uvc_set_log_levelPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int)>>(
        'uvc_set_log_level',
      );
  late final _uvc_set_log_level = _uvc_set_log_levelPtr
      .asFunction<void Function(int)>();

  /// Preview transform: rotation is 0, 90, 180, or 270 (clockwise degrees).
  /// flip_h mirrors the output left-right; flip_v mirrors it top-bottom.
  /// Transforms are applied during preview blit to the attached Flutter Texture
  /// and do not affect the shared RGBA buffer returned by copyLatestFrame.
  void uvc_set_preview_transform(int rotation, int flip_h, int flip_v) {
    return _uvc_set_preview_transform(rotation, flip_h, flip_v);
  }

  late final _uvc_set_preview_transformPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, ffi.Int, ffi.Int)>>(
        'uvc_set_preview_transform',
      );
  late final _uvc_set_preview_transform = _uvc_set_preview_transformPtr
      .asFunction<void Function(int, int, int)>();
